test/conformance/chainsaw/validate/clusterpolicy/cornercases/validate-pattern-should-skip/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    app: test-app
spec:
  containers:
    - name: main
      image: test/foo:1.2.3
      securityContext:
        allowPrivilegeEscalation: false
    - name: side
      image: test/foo:1.2.3
  initContainers:
    - name: init
      image: test/foo:1.2.3
      securityContext:
        allowPrivilegeEscalation: true
