test/conformance/chainsaw/validate/clusterpolicy/cornercases/validate-pattern-should-skip/report-skip-assert.yaml
apiVersion: wgpolicyk8s.io/v1beta1
kind: PolicyReport
metadata:
  ownerReferences:
  - apiVersion: v1
    kind: Pod
    name: test-pod
scope:
  apiVersion: v1
  kind: Pod
  name: test-pod
results:
- message: 'conditional anchor mismatch: resource value ''test/foo:1.2.3'' does not match ''!*/foo:*.*.*'' at path /spec/containers/0/image/; conditional anchor mismatch: resource value ''test/foo:1.2.3'' does not match ''!*/foo:*.*.*'' at path /spec/containers/1/image/; conditional anchor mismatch: resource value ''test/foo:1.2.3'' does not match ''!*/foo:*.*.*'' at path /spec/initContainers/0/image/'
  policy: priv
  result: skip
  rule: priv-esc
  source: kyverno
summary:
  error: 0
  fail: 0
  pass: 0
  skip: 1
  warn: 0
