test/conformance/chainsaw/validate/clusterpolicy/cornercases/validate-pattern-should-skip/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validate-pattern-should-skip
spec:
  steps:
    - name: step-01
      try:
        - apply:
            file: policy.yaml
        - assert:
            file: policy-assert.yaml
    - name: step-02
      try:
        - apply:
            file: resource.yaml
    - name: step-03
      try:
        - assert:
            file: report-skip-assert.yaml
